tests/reject/const_reassign.ty
const X = 5

fn main():
    X = 6
    println(str(X))
